Images for less whitespace

--- a/index.html
+++ b/index.html
@@ -37,11 +37,24 @@
 			</div>
 			<div class = 'col-8'>
 				<h3 class = 'title'>Dolly Parton was born in the impoverished Appalachian region of Tennessee in 1946, growing up with 12 siblings. 
+					She refers to herself back then as so poor the ants wouldn't even steal from them.
+				</h3>
+
+				<div class = 'gutter'></div>
+
+				<h3 class = 'title'>
+					Her childhood home is featured here and on the album cover of her 1973 <em>My Tennessee Mountain Home</em>.
+				</h3>
+
+				<div class = 'gutter'></div>
+
+				<h3 class = 'title'>
 					Her rise to fame is undeniably impressive, landing her in many halls of fame, associated with hundreds of songs, receiving over one hundred awards,
 					and donating a vast majority of her wealth to support her community.
 				</h3>
 			</div>
 		</div>
+
 	</div>
 
 
@@ -344,6 +357,11 @@
 
 	<div class = 'big-gutter'></div>
 
+	<div class = 'row news-feature'>
+		<!-- News story collage about impact -->
+	</div>
+
+	<div class = 'gutter'></div>
 
 	<div class = 'container-fluid module' id = 'module-4'>
 		<!-- Keeps everything together -->
