New images and separators

--- a/index.html
+++ b/index.html
@@ -149,8 +149,17 @@
 	</div>
 
 
-	<div class = 'big-gutter'></div>
+	<div class = 'gutter'></div>
+	<div class = 'gutter'></div>
 
+
+	<div class = 'row'>
+		<img src = "img/bw_cropped_news_s11.jpg" width = 99%>
+	</div>
+
+	<div class = 'gutter'></div>
+	<div class = 'gutter'></div>
+	
 
 	<!-- Title and external legend side by side, plot underneath that, slider underneath the timeline -->
 	<div class = 'container-fluid module' id = 'module-2'>
@@ -197,7 +206,8 @@
 	</div>
 
 
-	<div class = 'big-gutter'></div>
+	<div class = 'gutter'></div>
+	<div class = 'gutter'></div>
 
 
 	<div class = 'container-fluid module' id = 'module-3'>
@@ -357,8 +367,8 @@
 
 	<div class = 'big-gutter'></div>
 
-	<div class = 'row news-feature'>
-		<!-- News story collage about impact -->
+	<div class = 'row'>
+		<img src = "img/bw_cropped_news_s3.jpg" width = 99%>
 	</div>
 
 	<div class = 'gutter'></div>
