Dolly got Carnegie Medal in July 2022

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 				<div style="height: 80vh" id="selectorAll">
 					<!-- All -->
 					<h4 class = 'title'>
-						Of the 412 awards she has been at least nominated for, she holds Guinness World Records, million-plus streaming awards, countless Country Music Awards, and teaching recognition.
+						Of the 413 awards she has been at least nominated for, she holds Guinness World Records, million-plus streaming awards, countless Country Music Awards, and teaching recognition.
 					</h4>
 
 					<div class = 'gutter'></div>
@@ -236,7 +236,7 @@
 					<div class = 'gutter'></div>
 
 					<h4 class = 'title'>
-						She has received awards notably from the <em>Sevierville Chamber of Commerce</em>, <em>United States Fish and Wildlife Service</em>, <em>Daughters of the American Revolution</em>,
+						She has received awards notably from the <em>Carnegie Corporation of New York</em>, <em>United States Fish and Wildlife Service</em>, <em>Daughters of the American Revolution</em>,
 						<em>Woodrow Wilson International Center for Scholars of the Smithsonian Institution</em>, <em>United States Library of Congress</em> and the <em>United States Congress</em>.
 					</h4>
 
