Quote input save

--- a/index.html
+++ b/index.html
@@ -344,6 +344,12 @@
 
 	<div class = 'big-gutter'></div>
 
+	<!-- <div class = 'container-fluid quote-mod' id = 'readandwrite'>
+		<h3 class = 'title'>My father could not read and write and I saw how crippling that could be. <br> My dad was a very smart man. And I often wonder what he could have done had he been able to read and write.</h3>
+	</div> -->
+
+	<div class = 'gutter'></div>
+
 
 	<div class = 'container-fluid module' id = 'module-4'>
 		<!-- Keeps everything together -->
