Added big placeholder cards, ending image
- Fixed the missing source and team titles in the footer
- Added an image of dolly in a new complementary div for us to wrap up
  the story
- Added other big placeholder cards for text (quotes or extant text) to
  be put
- Lowered awards transition from 800 to 700 for smoother movement

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class = 'gutter'></div>
 
 				<h3 class = 'title'>
-					Her rise to fame is undeniably impressive, landing her in many halls of fame, associated with hundreds of songs, receiving over one hundred awards,
+					Her rise to fame is undeniably impressive, landing her in many halls of fame, associated with hundreds of songs, receiving over 200 awards,
 					and donating a vast majority of her wealth to support her community.
 				</h3>
 			</div>
@@ -158,6 +158,9 @@
 
 	<div class = 'row'>
 		<img src = "img/bw_cropped_news_s11.jpg" width = 99%>
+	</div>
+	<div class = 'container-fluid quote-mod' id = 'outsource0'>
+		<!-- Quote or text break -->
 	</div>
 
 	<div class = 'gutter'></div>
@@ -277,6 +280,8 @@
 						She has been induced into the Grammy Hall of Fame multiple times, the Rock and Roll Hall of Fame, and the Library of Congress's National Recording Registry. 
 					</h4>
 
+					<div class = 'gutter'></div>
+
 					<h4 class = 'title'>
 						In 1985 <em>Drinkin'stein</em> won the <em>Worst Original Song Award</em>.
 					</h4>
@@ -307,25 +312,6 @@
 					</h4>
 				</div>
 				<div style="height: 80vh" id="selectorMusic">
-					<!-- Musical Artistry -->
-					<!-- <h4 class = 'title'>
-						<em>Coat of Many Colors</em>: 1 Million Streams
-					</h4>
-					<h4 class = 'title'>
-						<em>The Seeker</em>: 1 Million Streams
-					</h4>
-					<h4 class = 'title'>
-						<em>Yellow Roses</em>: 1 Million Streams
-					</h4>
-					<h4 class = 'title'>
-						<em>Two Doors Down</em>: 2 Million Streams
-					</h4>
-					<h4 class = 'title'>
-						<em>Jolene</em>: 3 Million Streams
-					</h4>
-					<h4 class = 'title'>
-						<em>I Will Always Love You</em>: 10 Million Streams
-					</h4> -->
 					<h4 class = 'title'><em>1 Million Streams</em>: Yellow Roses</h4>
 					<h4 class = 'title'><em>1 Million Streams</em>: The Seeker</h4>
 					<h4 class = 'title'><em>1 Million Streams</em>: Coat of Many Colors </h4>
@@ -372,11 +358,12 @@
 
 	<div class = 'big-gutter'></div>
 
-	<!-- <div class = 'container-fluid quote-mod' id = 'readandwrite'>
-		<h3 class = 'title'>My father could not read and write and I saw how crippling that could be. <br> My dad was a very smart man. And I often wonder what he could have done had he been able to read and write.</h3>
-	</div> -->
+
 	<div class = 'row'>
 		<img src = "img/bw_cropped_news_s3.jpg" width = 99%>
+	</div>
+	<div class = 'container-fluid quote-mod' id = 'outsource1'>
+		<!-- Quote or text break -->
 	</div>
 
 	<div class = 'gutter'></div>
@@ -423,7 +410,18 @@
 	</div>
 
 
-	<div class = 'gutter'></div>
+	<div class = 'big-gutter'></div>
+
+	<div class = 'container-fluid quote-mod' id = 'outsource2'>
+		<div class = 'row'>
+			<div class = 'col-4'>
+				<img src="img/dolly_bw_closing.jpg" width = 600>
+			</div>
+			<div class = 'col-8'>
+				
+			</div>
+		</div>
+	</div>
 
 
 	<div class = 'container-fluid' id = 'footer'>
@@ -431,7 +429,7 @@
 
 		<!-- Sources list -->
 		<div class = 'row justify-content-center'>
-			<h3 class = "vis-title">Sources</h3>
+			<h3 class = "dark-title">Sources</h3>
 		</div>
 		<div class = 'row'>
 			<!-- For the moment, would like to add card bootstrapping with auto-rowing columns to list these -->
@@ -446,7 +444,7 @@
 		<!-- About us section -->
 		<a id="team"></a>
 		<div class = 'row justify-content-center'>
-			<h3 class = "vis-title">Project Team</h3>
+			<h3 class = "dark-title">Project Team</h3>
 		</div>
 		<div class = "row justify-content-between">
 			<div class = 'col-4'>
