Changing lead streams to total streams

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<div class = 'row' id = 'leadrecord'></div>
 				<div class = 'row' id = 'leadstreams'></div>
 				<div class = 'row'>
-					<h2 class = 'title'>Lead Streams</h2>
+					<h2 class = 'title'>Total Streams</h2>
 				</div>
 			</div>
 			<div class = 'col' id = 'metric2'>
