--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 				<img src="img/dolly-parton-tmh.jpg" class="d-block w-100" alt="...">
 			</div>
 			<div class = 'col-8'>
-				<h3 class = 'title'>Dolly Parton was born in the impoverished Appalachian region of Tennessee in 1946, growing up with 12 siblings. 
+				<h3 class = 'title tile'>Dolly Parton was born in the impoverished Appalachian region of Tennessee in 1946, growing up with 12 siblings. 
 					She refers to herself back then as so poor the ants wouldn't even steal from them.
 				</h3>
 
 				<div class = 'gutter'></div>
 
-				<h3 class = 'title'>
+				<h3 class = 'title tile'>
 					Her childhood home is featured here and on the album cover of her 1973 <em>My Tennessee Mountain Home</em>.
 				</h3>
 
 				<div class = 'gutter'></div>
 
-				<h3 class = 'title'>
+				<h3 class = 'title tile'>
 					Her rise to fame is undeniably impressive, landing her in many halls of fame, associated with hundreds of songs, receiving over 200 awards,
 					and donating a vast majority of her wealth to support her community.
 				</h3>
@@ -112,12 +112,12 @@
 				<div class= "big-gutter"></div>
 
 				<div style="height: 100vh">
-					<h4 class = 'title'>Ranging from classic country legend <em>Johnny Cash</em> to pop country hit <em>Luke Bryan</em>, country 
+					<h4 class = 'title tile'>Ranging from classic country legend <em>Johnny Cash</em> to pop country hit <em>Luke Bryan</em>, country 
 					music casts a wide net. Still, it's sound is unique to the United States. A bubble that doesn't stand out in the presence of
 					<em>Taylor Swift</em> and <em>Elvis Presley</em> is renowned artist <em> Dolly Parton</em>.</h4>
 				</div>
 				<div style="height: 100vh" id="bubble-second-text">
-					<h4 class = 'title'>Despite her comparatively small impact on the Billboards, she is famous for more than her solo music career. 
+					<h4 class = 'title tile'>Despite her comparatively small impact on the Billboards, she is famous for more than her solo music career. 
 						Out of these major players on the Billboards, she has collaborated with 14 of them. This would be higher, as many people wanted to record 
 						the infamous song eventually performed by <em>Whitney Huston</em>, <em>I Will Always Love You</em>. <em>Elvis Presley</em> was one of them.
 					</h4>
@@ -138,7 +138,7 @@
 		
 				<div class = 'row'>
 					<div class = 'col' style="height: 200vh; width: 100%;" >
-						<div class = 'col bubble-vis' id = 'vis-1a' style="height: 80vh; width: 100%; position: sticky; top: 0" >
+						<div class = 'col bubble-vis fader' id = 'vis-1a' style="height: 80vh; width: 100%; position: sticky; top: 0" >
 							<!-- Bubble SVG should go right where this is -->
 						</div>
 					</div>
@@ -154,7 +154,7 @@
 		<!-- Title for the country bubble visualization will be to the left of an external legend -->
 		<a id="collaborations"></a>
 		<div class = 'row'>
-			<div class = 'col'>
+			<div class = 'col fader'>
 				<div class = "row">
 					<div class = 'col' id = 'vis-1c-title'>
 						<h3 class = 'vis-title title'>Beyond the Billboards</h3>
