progress on appearance and bio

--- a/index.html
+++ b/index.html
@@ -34,30 +34,63 @@
 	<div class = 'container-fluid module' id = 'introduction'>
 		<div class = 'row'>
 			<div class = 'col-4'>
-				<img src="img/dolly-parton-tmh.jpg" class="d-block w-100" alt="...">
+				<img src="img/dolly-parton-tmh.jpg" class="d-block w-100 fader2" alt="...">
 			</div>
 			<div class = 'col-8'>
-				<h3 class = 'title tile'>Dolly Parton was born in the impoverished Appalachian region of Tennessee in 1946, growing up with 12 siblings. 
+				<p class ='fader2'>Dolly Parton was born in the impoverished Appalachian region of Tennessee in 1946, growing up with 12 siblings.
 					She refers to herself back then as so poor the ants wouldn't even steal from them.
-				</h3>
-
-				<div class = 'gutter'></div>
-
-				<h3 class = 'title tile'>
+				<br>
+					<br>
 					Her childhood home is featured here and on the album cover of her 1973 <em>My Tennessee Mountain Home</em>.
-				</h3>
-
-				<div class = 'gutter'></div>
-
-				<h3 class = 'title tile'>
+				<br><br>
 					Her rise to fame is undeniably impressive, landing her in many halls of fame, associated with hundreds of songs, receiving over 200 awards,
 					and donating a vast majority of her wealth to support her community.
-				</h3>
+				</p>
 			</div>
 		</div>
 
 	</div>
+	<!-- Describing her Popularity -->
+	<div class = 'container-fluid module' id = 'popularity2'>
+		<div class = 'row'>
 
+			<div class = 'col-12'>
+				<p class ='fader2'>Dolly Parton was born in the impoverished Appalachian region of Tennessee in 1946, growing up with 12 siblings.
+					She refers to herself back then as so poor the ants wouldn't even steal from them.
+					<br>
+					<br>
+					Her childhood home is featured here and on the album cover of her 1973 <em>My Tennessee Mountain Home</em>.
+					<br><br>
+					Her rise to fame is undeniably impressive, landing her in many halls of fame, associated with hundreds of songs, receiving over 200 awards,
+					and donating a vast majority of her wealth to support her community.
+				</p>
+			</div>
+			<div class = 'col-4'>
+				<img src="img/couch_dolly.jpeg" class="d-block w-100 fader2" alt="...">
+			</div>
+		</div>
+
+	</div>
+	<div class = 'container-fluid module' id = 'popularity2'>
+		<div class = 'row'>
+
+			<div class = 'col-8'>
+				<p class ='fader2'>Dolly Parton was born in the impoverished Appalachian region of Tennessee in 1946, growing up with 12 siblings.
+					She refers to herself back then as so poor the ants wouldn't even steal from them.
+					<br>
+					<br>
+					Her childhood home is featured here and on the album cover of her 1973 <em>My Tennessee Mountain Home</em>.
+					<br><br>
+					Her rise to fame is undeniably impressive, landing her in many halls of fame, associated with hundreds of songs, receiving over 200 awards,
+					and donating a vast majority of her wealth to support her community.
+				</p>
+			</div>
+			<div class = 'col-4'>
+				<img src="img/couch_dolly.jpeg" class="d-block w-100 fader2" alt="...">
+			</div>
+		</div>
+
+	</div>
 
 	<div class = 'big-gutter'></div>
 
@@ -112,12 +145,12 @@
 				<div class= "big-gutter"></div>
 
 				<div style="height: 100vh">
-					<h4 class = 'title tile'>Ranging from classic country legend <em>Johnny Cash</em> to pop country hit <em>Luke Bryan</em>, country 
+					<h4 class = 'title fader2'>Ranging from classic country legend <em>Johnny Cash</em> to pop country hit <em>Luke Bryan</em>, country
 					music casts a wide net. Still, it's sound is unique to the United States. A bubble that doesn't stand out in the presence of
 					<em>Taylor Swift</em> and <em>Elvis Presley</em> is renowned artist <em> Dolly Parton</em>.</h4>
 				</div>
 				<div style="height: 100vh" id="bubble-second-text">
-					<h4 class = 'title tile'>Despite her comparatively small impact on the Billboards, she is famous for more than her solo music career. 
+					<h4 class = 'title fader2'>Despite her comparatively small impact on the Billboards, she is famous for more than her solo music career.
 						Out of these major players on the Billboards, she has collaborated with 14 of them. This would be higher, as many people wanted to record 
 						the infamous song eventually performed by <em>Whitney Huston</em>, <em>I Will Always Love You</em>. <em>Elvis Presley</em> was one of them.
 					</h4>
@@ -138,7 +171,7 @@
 		
 				<div class = 'row'>
 					<div class = 'col' style="height: 200vh; width: 100%;" >
-						<div class = 'col bubble-vis fader' id = 'vis-1a' style="height: 80vh; width: 100%; position: sticky; top: 0" >
+						<div class = 'col bubble-vis fader6' id = 'vis-1a' style="height: 80vh; width: 100%; position: sticky; top: 0" >
 							<!-- Bubble SVG should go right where this is -->
 						</div>
 					</div>
@@ -154,7 +187,7 @@
 		<!-- Title for the country bubble visualization will be to the left of an external legend -->
 		<a id="collaborations"></a>
 		<div class = 'row'>
-			<div class = 'col fader'>
+			<div class = 'col fader6'>
 				<div class = "row">
 					<div class = 'col' id = 'vis-1c-title'>
 						<h3 class = 'vis-title title'>Beyond the Billboards</h3>
