--- a/index.html
+++ b/index.html
@@ -479,6 +479,32 @@
 		</div>
 	</div>
 
+	<div class = 'gutter'></div>
+
+
+	<a id="imaginationlibrary"></a>
+	<div class = 'container-fluid module' id = 'module-4'>
+		<!-- Keeps everything together -->
+		<div class = 'row'>
+			<div class = 'col-4'>
+				<h4 class = 'title'>Text TBD</h4>
+			</div>
+
+			<div class = 'col-8' style="display: flex; flex-direction: column; height: 80vh">
+				<div class = "row">
+					<div class = 'col'>
+						<h3 class = 'vis-title title'>Imagination Library Expenses</h3>
+					</div>
+				</div>
+
+				<div class = 'row' style="flex: auto">
+					<div class = 'col' style="height: 100%; width: 100%;" >
+						<div class = 'library-vis' id='vis-5'></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div class = 'big-gutter'></div>
 
@@ -564,6 +590,7 @@
 			<div><a href="#musicalhistory" title="Musical history">&bull; <span class="item-text">Musical history</span></a></div>
 			<div><a href="#recognition" title="Recognition">&bull; <span class="item-text">Recognition</span></a></div>
 			<div><a href="#charity" title="Charity">&bull; <span class="item-text">Charity</span></a></div>
+			<div><a href="#imaginationlibrary" title="Imagination library">&bull; <span class="item-text">Imagination library</span></a></div>
 			<div><a href="#team" title="Team">&bull; <span class="item-text">Team</span></a></div>
 		</div>
 		<div style="flex-grow: 1"></div>
@@ -595,6 +622,7 @@
 	<script src = 'js/TimeSeries.js'></script>
 	<script src = 'js/Awards.js'></script>
 	<script src = 'js/Charity.js'></script>
+	<script src = 'js/BarGraph.js'></script>
 	<script src = "js/main.js"></script>
 
 </body>
