--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 
         </div>
     </div>
+
     <div class="container-fluid module" id='module-1a'>
 
 
@@ -505,11 +506,24 @@
 
 <div class='big-gutter'></div>
 
+<div class='container-fluid module' id='charity_intro'>
+    <div class='row'>
+        <div class='col-12'>
+            <p class='fader6'> While Dolly was careful never to make political waves, she has made extreme efforts
+                to effect change that matters to her through charitable efforts. She is quiet about most of her
+                charitable endeavors, so the full extent will probably never be known. She is most famous for the
+                Imagination Library, a one million dollar donation that helped fund the moderna vaccine, and repeated
+                efforts to help her home state of Tennessee. Just last month, Jeff Bezos awarded her $100 million for
+                charitable efforts.
+            </p>
+        </div>
 
-<div class='row fader3'>
+    </div>
+</div>
+<div class='row fader4'>
     <img src="img/bw_cropped_news_s3.jpg" width=99%>
 </div>
-<div class='container-fluid quote-mod' id='outsource1'>
+<!--<div class='container-fluid quote-mod' id='outsource1'> -->
 
     <a id="imaginationlibrary"></a>
     <div class='container-fluid module' id='module-4'>
@@ -517,7 +531,7 @@
         <div class='col-12'>
             <div class="row">
                 <div class='col' id='vis-1f-title'>
-                    <h1 class='vis-title title fader4'>Imagination Library </h1>
+                    <h1 class='vis-1f-title fader4'>Imagination Library </h1>
                 </div>
             </div>
         </div>
@@ -531,8 +545,12 @@
                 him. The Imagination Library sends monthly free books to young children in hopes of fostering a love
                 of reading and a love of learning. Currently, 1 in 10 children in the United States are enrolled in the
                 Imagination Library program, and the program has gifted over 195 million books to date.
-                    <br><br>
-                    We estimate the total cost of the program to be over $320 million.
+                    <br><br></p>
+                <p class='library fader3'>   We estimate the total cost of the program to be over $320 million.
+                    <br><br></p>
+
+                <p class='library fader3'> During the pandemic, she also hosted a virtual reading hour </p>
+
 
                 </p>
             </div>
@@ -546,7 +564,7 @@
 
                 <div class='row' style="flex: auto">
                     <div class='col' style="height: 100%; width: 100%;">
-                        <div class='library-vis fader6' id='vis-5'></div>
+                        <div class='library-vis fader8' id='vis-5'></div>
                     </div>
                 </div>
             </div>
@@ -554,37 +572,47 @@
     </div> <!-- Quote or text break -->
 </div>
 
-<div class='gutter'></div>
+<div class='container-fluid module' id='ten_intro'>
+    <div class='row'>
+        <div class ='col-4'>
+            <img src="img/partonfamily.jpeg">
+            <p style="font-size: meidum">The Parton family in the 40s or 50s</p>
+            </div>
+        <div class='col-8'>
+            <p class='fader6'> Dolly grew up in extreme poverty, and never forgot her roots. Nearly all
+                of her known charitable ventures appear to be deeply personal, and centered around her hometown of Sevier, Tennesee.
+                She has paid particular attention to education and healthcare.
+                <br><br>
 
-<div class='gutter'></div>
+                Dolly's biggest influence is probably the purchase and continued expansion of
+                Dollywood, a thempark in Sevier. An assessment by the Tennessee Department of Transportation estimates the
+                economic impact of Dollywood to be ~1.8 billion per year. Dollywood currently employs ~11,000
+                people.
+                The impacts of a successful tourist attraction in an impoverished region cannot be overstated.
+            </p>
+        </div>
 
+    </div>
+</div>
 
 <a id="charity"></a>
 <div class='container-fluid module' id='module-5'>
     <!-- Keeps everything together -->
     <div class='row'>
         <div class='col-4'>
-            <h4 class='title'>Dolly Parton grew up in an extremely impoverished area of the country. Her
-                father was illiterate and access to medical care good medical care wasn't always available. She
-                has been quiet about her philanthropy, but many of the ones that are publicly known have been
-                focused
-                on trying to help support her home state, particularly in the areas that she observed to be lacking
-                - health and education.</h4>
-            <div class='big-gutter'></div>
 
-            <h4 class='title'>Her biggest impact is probably the purchase and continued expansion of Dollywood, a
-                themepark right
-                in her home county. An assessment by the Tennessee Department of Transportation estimates the
-                economic impact of Dollywood to be ~1.8 billion per year. Dollywood currently employs ~11,000
-                people.
-                The impacts of a successful tourist attraction in an impoverished region cannot be overstated.</h4>
-            <div class='big-gutter'></div>
-
-            <h4 class='title'>There are certainly many factors that may drive poverty rates, but census data appears
+            <h4 class='title'> We were curious to see if any impact from Dolly's attempts to help her hometown could be observed.
+                Here we show poverty rates collected from census data, and the location and relative size of her
+                donation. Bubble size represents donation size*
+                <br><br>
+                There are certainly many factors that may drive poverty rates, but census data appears
                 to suggest
                 that Sevier County performed better over the decades than surrounding counties, possibly due to the
                 Dolly's repeated attempts to help the region, especially with the support of Dollywood.</h4>
+            <p>*Except for one Dollywood bubble,which represented as impact assessed. The amount of money she has put
+                into Dollywood over the years is not known</p>
         </div>
+
 
         <div class='col-8' style='display: flex; flex-direction: column; height: 100vh'>
             <div class='row' style='flex: 0 0 auto'>
@@ -601,12 +629,32 @@
     </div>
 </div>
 
+<div class="row fader6" id="charitypics">
+    <div class = 'col-4'>
+         <img src ="img/dollyvaxwide.webp" >
+    <p><br><br>Dolly receiving the vaccine she helped fund</p>
+    </div>
+
+<div class = 'col-4'>
+<img src ="img/dollywood.jpeg" >
+<p><br><br>Dolly at the early days of Dollywood</p>
+</div>
+
+    <div class = 'col-4'>
+        <img src ="img/dollyreading.jpeg" >
+        <p><br><br>Dolly hosting a story hour to celebrate the donation of the 100 millionth book</p>
+    </div>
+
+
+
+</div>
+
 <div class='gutter'></div>
 
 
 <div class='big-gutter'></div>
 
-<div class='container-fluid quote-mod' id='outsource2'>
+<!--<div class='container-fluid quote-mod' id='outsource2'>-->
     <div class='row'>
         <div class='col-4'>
             <img src="img/dolly_bw_closing.jpg" width=600>
@@ -630,8 +678,18 @@
         <ul>
             <li>Wikipedia contributors. (2022, October 23). List of awards and nominations received by Dolly Parton.
                 <em>In Wikipedia, The Free Encyclopedia.</em></li>
+            <i>Wikipedia contributors. (2022, November 13). List of songs recorded by Dolly Parton.
+                <em>In Wikipedia, The Free Encyclopedia.</em></i>
             <li>Dhruvil Dave. (2021). Billboard "The Hot 100" Songs[Data set]. Kaggle.</li>
             <li>Adnan Anam. (2022). Spotify Artist Stats[Data set]. Kaggle.</li>
+            <li>Dollywood Foundation Form 990 filings (2001-2020). IRS, via ProPublica Nonprofit Explorer</li>
+            <li>IPUMS NHGIS, University of Minnesota, www.nhgis.org</li>
+            <li>U.S. Census Bureau (2020). Poverty status in the past 12 months,
+                2020 American Community Survey 5-year estimates data profiles. The Census Bureau.
+                <a href ="https://data.census.gov/table?t=Official+Poverty+Measure&g=0400000US47$0500000&tid=ACSST5Y2020.S1701">https://data.census.gov/table?t=Official+Poverty+Measure&g=0400000US47$0500000&tid=ACSST5Y2020.S1701</a></li>
+            <li>U.S. Census Bureau (2015). Historical County Level Poverty Estimates Tool. Retrieved from
+                <a href ="https://www.census.gov/library/visualizations/time-series/demo/census-poverty-tool.html">https://www.census.gov/library/visualizations/time-series/demo/census-poverty-tool.html</a></li>
+            <li>Donations and other Biographical Info: Many open source sources</li>
         </ul>
     </div>
 
