full revamp of side including fading elements and biographical text and color considerations

--- a/index.html
+++ b/index.html
@@ -574,9 +574,9 @@
 
 <div class='container-fluid module' id='ten_intro'>
     <div class='row'>
-        <div class ='col-4'>
+        <div class ='col-4 fader3'>
             <img src="img/partonfamily.jpeg">
-            <p style="font-size: meidum">The Parton family in the 40s or 50s</p>
+            <p style="font-size: large"><br>The Parton family in the 40s or 50s</p>
             </div>
         <div class='col-8'>
             <p class='fader6'> Dolly grew up in extreme poverty, and never forgot her roots. Nearly all
@@ -598,26 +598,32 @@
 <a id="charity"></a>
 <div class='container-fluid module' id='module-5'>
     <!-- Keeps everything together -->
+    <div class="row">
+        <div class = col-12>
+            <h1 class='ten-title fader3'>My Tennessee Mountain Home</h1>
+            </div>
+    </div>
+
     <div class='row'>
         <div class='col-4'>
-
-            <h4 class='title'> We were curious to see if any impact from Dolly's attempts to help her hometown could be observed.
+            <div class='big-gutter'></div>
+            <p class="fader3"> We were curious to see if any impact from Dolly's attempts to help her hometown could be observed.
                 Here we show poverty rates collected from census data, and the location and relative size of her
-                donation. Bubble size represents donation size*
-                <br><br>
+                donation. Bubble size represents donation size* </p>
+            <p class="fader3"><br><br>
                 There are certainly many factors that may drive poverty rates, but census data appears
                 to suggest
                 that Sevier County performed better over the decades than surrounding counties, possibly due to the
-                Dolly's repeated attempts to help the region, especially with the support of Dollywood.</h4>
-            <p>*Except for one Dollywood bubble,which represented as impact assessed. The amount of money she has put
-                into Dollywood over the years is not known</p>
+                Dolly's repeated attempts to help the region, especially with the support of Dollywood.</p>
+            <p class = fader3 style="font-size: small" ><em>*Except for one Dollywood bubble,which represented as impact assessed. The amount of money she has put
+                into Dollywood over the years is not known</em></p>
         </div>
 
 
         <div class='col-8' style='display: flex; flex-direction: column; height: 100vh'>
             <div class='row' style='flex: 0 0 auto'>
                 <div class='col' id='vis-4-title'>
-                    <h3 class='vis-title title'>My Tennessee Mountain Home</h3>
+                    <h3 class='vis-title title'></h3>
                 </div>
             </div>
 
@@ -705,6 +711,7 @@
             <div class="card" style="width: 25rem;">
                 <div class="card-body">
                     <h5 class="card-title">Isidora Diaz</h5>
+                    <img src="img/isidora.jpeg">
                     <h6 class="card-subtitle mb-2 text-muted">Harvard University</h6>
                     <h6 class="card-subtitle mb-2 text-muted">Data Science MS Candidate</h6>
                     <p class="card-text">...</p>
@@ -716,6 +723,7 @@
             <div class="card" style="width: 25rem;">
                 <div class="card-body">
                     <h5 class="card-title">Hope Neveux</h5>
+                    <img src="img/hope.jpeg">
                     <h6 class="card-subtitle mb-2 text-muted">Harvard University</h6>
                     <h6 class="card-subtitle mb-2 text-muted">Data Science MS Candidate</h6>
                     <p class="card-text">Passionate about accessible, digestible, honest, and impactful
@@ -728,6 +736,7 @@
             <div class="card" style="width: 25rem;">
                 <div class="card-body">
                     <h5 class="card-title">Loralee Ryan</h5>
+                    <img src="img/loralee.jpeg">
                     <h6 class="card-subtitle mb-2 text-muted">Harvard University</h6>
                     <h6 class="card-subtitle mb-2 text-muted">Data Science MS Candidate</h6>
                     <p class="card-text">...</p>
@@ -756,10 +765,10 @@
                     class="item-text">Musical history</span></a></div>
             <div><a href="#recognition" title="Recognition"><span class="bullet">&bull;</span> <span class="item-text">Recognition</span></a>
             </div>
-            <div><a href="#charity" title="Charity"><span class="bullet">&bull;</span> <span
-                    class="item-text">Charity</span></a></div>
             <div><a href="#imaginationlibrary" title="Imagination library"><span class="bullet">&bull;</span> <span
                     class="item-text">Imagination library</span></a></div>
+            <div><a href="#charity" title="Charity"><span class="bullet">&bull;</span> <span
+                    class="item-text">Charity</span></a></div>
             <div><a href="#team" title="Team"><span class="bullet">&bull;</span> <span class="item-text">Team</span></a>
             </div>
         </div>
